table refactor, new input dialog components

--- a/src/app.html
+++ b/src/app.html
@@ -15,4 +15,4 @@
 
 <!--TODO: add comments in whole app-->
 
-<!--TODO: add form validation to each form/input-->
+<!--TODO: add form validation to each form/input - zod-->
