feat: date range preset buttons; component refactor

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,6 @@
 	</body>
 </html>
 
-<!--TODO: add comments in whole app-->
+<!--TODO: add form and input validation - zod-->
 
-<!--TODO: add form validation to each form/input - zod-->
+<!--TODO: code refactor + naming + comments-->
