--- a/src/app.html
+++ b/src/app.html
@@ -16,3 +16,20 @@
 </body>
 
 </html>
+
+<style>
+	/* body {
+		background: white;
+		margin: 0;
+		box-shadow: 0;
+	}
+
+	@media print {
+		body {
+			background: white;
+			margin: 0;
+			box-shadow: 0;
+		}
+	} */
+
+</style>
