--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">
+	<div style="display: contents" class="selection:bg-albi-500 selection:text-white">
 		%sveltekit.body%
 	</div>
 </body>
