--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="%paraglide.lang%" dir="%paraglide.textDirection%">
+
 
 <head>
 	<meta charset="utf-8" />
