--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Albiline</title>
+	<meta name="author" content="Monika Buchtíková">
 	%sveltekit.head%
 </head>
 
