--- a/src/app.html
+++ b/src/app.html
@@ -19,3 +19,7 @@
 </body>
 
 </html>
+
+<!--<script src="JSPrintManager.js"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>-->
+<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
