fix: paraglide migration, logout cookie delete

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="%paraglide.lang%" dir="%paraglide.textDirection%">
-
+<html lang="%lang%">
 
 <head>
 	<meta charset="utf-8" />
@@ -19,7 +18,3 @@
 </body>
 
 </html>
-
-<!--<script src="JSPrintManager.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>-->
-<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
